<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TakeQuiz"
    android:orientation="vertical"
    android:padding="40dp"
    android:background="@color/white"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_quiz_category"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:fontFamily="@font/poppins"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oop"
        android:textSize="20sp"
        android:fontFamily="@font/poppinslmedium"
        android:backgroundTint="@color/seagreen"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:id="@+id/btnoop"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dsa"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppinslmedium"
        android:backgroundTint="@color/seagreen"
        android:layout_marginTop="20dp"
        android:id="@+id/btndsa"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/database"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/poppinslmedium"
        android:backgroundTint="@color/seagreen"
        android:layout_marginTop="20dp"
        android:id="@+id/btndatabase"

        />



</LinearLayout>