<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:layout_marginBottom="40dp"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:src="@drawable/logo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:textSize="40sp"
        android:textColor="#1CA189"
        android:fontFamily="@font/poppins"


        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
       <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_your_name"
           android:textColor="#1CA189"
           android:id="@+id/etname"



            />



    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/student_id"
            android:textColor="#1CA189"
            android:id="@+id/etstudentid"




            />



    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginQuiz"
        android:layout_marginTop="40dp"
        android:backgroundTint="#1CA189"
        android:textColor="@color/white"
        android:id="@+id/btnlogin"

        />




</LinearLayout>