<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".Dashboard">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quizify_dashboard"
        android:textSize="25sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/gray"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textSize="25sp"

        android:fontFamily="@font/poppins"
        android:textColor="@color/seagreen"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center"

        >
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_quiz"
        android:textSize="20sp"
        android:backgroundTint="@color/seagreen"
        android:layout_marginTop="20dp"
        android:id="@+id/btntakequiz"
        android:textColor="@color/white"

        />



</LinearLayout>
</LinearLayout>